--- a/roadpin_backend/development.ini
+++ b/roadpin_backend/development.ini
@@ -7,7 +7,8 @@
 use = egg:app
 dologstdout = 0
 
-mongo_server_hostname = ds029338.mongolab.com:29338
+#mongo_server_hostname = ds029338.mongolab.com:29338
+mongo_server_hostname = localhost
 mongo_server = road
 
 ###
