--- a/roadpin_backend/deploy/supervisor/roadpin_backend.conf
+++ b/roadpin_backend/deploy/supervisor/roadpin_backend.conf
@@ -10,3 +10,17 @@ stderr_logfile_maxbytes=500MB
 stderr_logfile_backups=2
 numprocs=1
 numprocs_start=1
+
+
+[program:roadpin_backend_cron_taipei_city]
+command=/srv/roadpin_backend/scripts/env_run.sh python -m app.cron_data.cron_taipei_city -i production.ini
+process_name=roadpin_backend_cron_taipei_city
+directory=/srv/roadpin_backend
+stdout_logfile=/var/log/roadpin_backend/log.cron_taipei_city.out.txt
+stdout_logfile_maxbytes=500MB
+stdout_logfile_backups=2
+stderr_logfile=/var/log/roadpin_backend/log.cron_taipei_city.err.txt
+stderr_logfile_maxbytes=500MB
+stderr_logfile_backups=2
+numprocs=1
+numprocs_start=1
