--- a/roadpin_backend/deploy/supervisor/roadpin_backend.conf
+++ b/roadpin_backend/deploy/supervisor/roadpin_backend.conf
@@ -1,26 +1,27 @@
 [program:roadpin_backend]
-command=/srv/roadpin_backend/scripts/env_run.sh python -m app.main 3456 production.ini
-process_name=roadpin_backend-3456
-directory=/srv/roadpin_backend
-stdout_logfile=/var/log/roadpin_backend/log.3456.out.txt
-stdout_logfile_maxbytes=500MB
+command=/srv/roadpin/roadpin_backend/scripts/env_run.sh python -m app.main -p 5346 production.ini
+process_name=roadpin_backend-5346
+user=roadpin
+directory=/srv/roadpin/roadpin_backend
+stdout_logfile=/var/log/roadpin/log.roadpin_backend-5346.out.txt
+stdout_logfile_maxbytes=200MB
 stdout_logfile_backups=2
-stderr_logfile=/var/log/roadpin_backend/log.3456.err.txt
-stderr_logfile_maxbytes=500MB
+stderr_logfile=/var/log/roadpin/log.roadpin_backend-5346.err.txt
+stderr_logfile_maxbytes=200MB
 stderr_logfile_backups=2
 numprocs=1
 numprocs_start=1
 
-
 [program:roadpin_backend_cron_taipei_city]
-command=/srv/roadpin_backend/scripts/env_run.sh python -m app.cron_data.cron_taipei_city -i production.ini
+command=/srv/roadpin/roadpin_backend/scripts/env_run.sh python -m app.cron_data.cron_taipei_city -i /etc/roadpin/production.ini
 process_name=roadpin_backend_cron_taipei_city
+user=roadpin
 directory=/srv/roadpin_backend
-stdout_logfile=/var/log/roadpin_backend/log.cron_taipei_city.out.txt
-stdout_logfile_maxbytes=500MB
+stdout_logfile=/var/log/roadpin/log.cron_taipei_city.out.txt
+stdout_logfile_maxbytes=200MB
 stdout_logfile_backups=2
-stderr_logfile=/var/log/roadpin_backend/log.cron_taipei_city.err.txt
-stderr_logfile_maxbytes=500MB
+stderr_logfile=/var/log/roadpin/log.cron_taipei_city.err.txt
+stderr_logfile_maxbytes=200MB
 stderr_logfile_backups=2
 numprocs=1
 numprocs_start=1
