--- a/roadpin_backend/deploy/supervisor/roadpin_backend.conf
+++ b/roadpin_backend/deploy/supervisor/roadpin_backend.conf
@@ -1,5 +1,5 @@
 [program:roadpin_backend]
-command=/srv/roadpin/roadpin_backend/scripts/env_run.sh python -m app.main -p 5346 -i production.ini
+command=/srv/roadpin/roadpin_backend/scripts/env_run.sh python -m app.main -p 5346 -i /etc/roadpin/production.ini
 process_name=roadpin_backend-5346
 user=roadpin
 directory=/srv/roadpin/roadpin_backend
