--- a/roadpin_backend/deploy/supervisor/roadpin_backend.conf
+++ b/roadpin_backend/deploy/supervisor/roadpin_backend.conf
@@ -26,15 +26,15 @@ stderr_logfile_backups=2
 numprocs=1
 numprocs_start=1
 
-[program:roadpin_backend_cron_kaohsiung_city]
-command=/srv/roadpin/roadpin_backend/scripts/env_run.sh python -m app.cron_data.cron_kaohsiung_city -i /etc/roadpin/production.ini
-process_name=roadpin_backend_cron_kaohsiung_city
+[program:roadpin_backend_cron_kaohsiung]
+command=/srv/roadpin/roadpin_backend/scripts/env_run.sh python -m app.cron_data.cron_kaohsiung -i /etc/roadpin/production.ini
+process_name=roadpin_backend_cron_kaohsiung
 user=roadpin
 directory=/srv/roadpin/roadpin_backend
-stdout_logfile=/var/log/roadpin/log.cron_kaohsiung_city.out.txt
+stdout_logfile=/var/log/roadpin/log.cron_kaohsiung.out.txt
 stdout_logfile_maxbytes=200MB
 stdout_logfile_backups=2
-stderr_logfile=/var/log/roadpin/log.cron_kaohsiung_city.err.txt
+stderr_logfile=/var/log/roadpin/log.cron_kaohsiung.err.txt
 stderr_logfile_maxbytes=200MB
 stderr_logfile_backups=2
 numprocs=1
