--- a/roadpin_backend/requirements.txt
+++ b/roadpin_backend/requirements.txt
@@ -3,6 +3,8 @@ Cython==0.19.1
 Fabric==1.6.0
 PyYAML==3.10
 SQLAlchemy==0.8.2
+Scrapy==0.18.0
+Twisted==13.1.0
 WebOb==1.2.3
 WebTest==1.4.3
 argparse==1.2.1
@@ -25,18 +27,21 @@ paramiko==1.10.1
 protobuf==2.5.0
 protobuf-to-dict==0.0.5
 psycopg2==2.5.1
+pyOpenSSL==0.13
 pycrypto==2.6
 pycurl==7.19.0
 pygeoip==0.2.6
 pymongo==2.5.2
 python-termstyle==0.1.10
 pytz==2013b
+queuelib==1.0
 redis==2.7.2
 requests==1.2.0
 sniffer==0.2.6
 ua-parser==0.3.2
 ujson==1.30
 virtualenv==1.9.1
+w3lib==1.3
 wsgiref==0.1.2
 zope.deprecation==4.0.2
 zope.interface==4.0.5
