able to show tables. TODO: 1. deploy to roadpin. 2. try to integrate with ngTable

--- a/roadpin_backend/deploy/supervisor/roadpin_backend.conf
+++ b/roadpin_backend/deploy/supervisor/roadpin_backend.conf
@@ -39,3 +39,17 @@ stderr_logfile_maxbytes=200MB
 stderr_logfile_backups=2
 numprocs=1
 numprocs_start=1
+
+[program:roadpin-frontend]
+command=/srv/roadpin/roadpin-frontend/scripts/server2.sh
+process_name=roadpin-frontend
+user=roadpin
+directory=/srv/roadpin/roadpin-frontend
+stdout_logfile=/var/log/roadpin/log.roadpin-frontend.out.txt
+stdout_logfile_maxbytes=200MB
+stdout_logfile_backups=2
+stderr_logfile=/var/log/roadpin/log.roadpin-frontend.err.txt
+stderr_logfile_maxbytes=200MB
+stderr_logfile_backups=2
+numprocs=1
+numprocs_start=1
