modify roadpin-frontend supervisor.conf

--- a/roadpin_backend/deploy/supervisor/roadpin_backend.conf
+++ b/roadpin_backend/deploy/supervisor/roadpin_backend.conf
@@ -41,7 +41,7 @@ numprocs=1
 numprocs_start=1
 
 [program:roadpin-frontend]
-command=/srv/roadpin/roadpin-frontend/scripts/server2.sh /srv/roadpin/roadpin-frontend/node_modules/brunch/bin/brunch watch --server -P
+command=/srv/roadpin/roadpin-frontend/scripts/server2.sh node /srv/roadpin/roadpin-frontend/node_modules/brunch/bin/brunch watch --server -P
 process_name=roadpin-frontend
 user=roadpin
 directory=/srv/roadpin/roadpin-frontend
