--- a/roadpin_backend/requirements.txt
+++ b/roadpin_backend/requirements.txt
@@ -14,7 +14,7 @@ coverage==3.6
 distribute==0.6.35
 fluent-logger==0.3.3
 gdata==2.0.17
--e git://github.com/surfly/gevent.git@1.0rc2#egg=gevent-dev
+gevent==1.0
 greenlet==0.4.0
 grequests==0.2.0
 jedi==0.5b5
