--- a/roadpin_backend/deploy/supervisor/roadpin_backend.conf
+++ b/roadpin_backend/deploy/supervisor/roadpin_backend.conf
@@ -40,6 +40,20 @@ stderr_logfile_backups=2
 numprocs=1
 numprocs_start=1
 
+[program:roadpin_backend_cron_new_taipei_city]
+command=/srv/roadpin/roadpin_backend/scripts/env_run.sh python -m app.cron_data.cron_new_taipei_city -i /etc/roadpin/production.ini
+process_name=roadpin_backend_cron_new_taipei_city
+user=roadpin
+directory=/srv/roadpin/roadpin_backend
+stdout_logfile=/var/log/roadpin/log.cron_new_taipei_city.out.txt
+stdout_logfile_maxbytes=200MB
+stdout_logfile_backups=2
+stderr_logfile=/var/log/roadpin/log.cron_new_taipei_city.err.txt
+stderr_logfile_maxbytes=200MB
+stderr_logfile_backups=2
+numprocs=1
+numprocs_start=1
+
 [program:roadpin-frontend]
 command=/srv/roadpin/roadpin-frontend/scripts/server2.sh node /srv/roadpin/roadpin-frontend/node_modules/brunch/bin/brunch watch --server -P
 process_name=roadpin-frontend
