--- a/roadpin-frontend/bower.json
+++ b/roadpin-frontend/bower.json
@@ -13,7 +13,8 @@
     "angular-ui-map": "~0.0.2",
     "json3": "~3.2.4",
     "bootstrap-sass": "~3.0.0",
-    "jquery": "~2.0.0"
+    "jquery": "~2.0.0",
+    "ng-grid": "~2.0.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0-rc.2",
