1. init backend_refactor 2. cfg add log_filename. 3. add scripts_op/backend_server.sh

--- a/roadpin_backend/deploy/supervisor/roadpin_backend.conf
+++ b/roadpin_backend/deploy/supervisor/roadpin_backend.conf
@@ -1,5 +1,5 @@
 [program:roadpin_backend]
-command=/srv/roadpin/roadpin_backend/scripts/env_run.sh python -m app.main -p 5346 -i /etc/roadpin/production.ini
+command=/srv/roadpin/roadpin_backend/scripts/env_run.sh python -m app.main -p 5346 -i /etc/roadpin/production.ini -l /var/log/roadpin/log.roadpin_backend-5346.txt
 process_name=roadpin_backend-5346
 user=roadpin
 directory=/srv/roadpin/roadpin_backend
@@ -7,62 +7,6 @@ stdout_logfile=/var/log/roadpin/log.roadpin_backend-5346.out.txt
 stdout_logfile_maxbytes=200MB
 stdout_logfile_backups=2
 stderr_logfile=/var/log/roadpin/log.roadpin_backend-5346.err.txt
-stderr_logfile_maxbytes=200MB
-stderr_logfile_backups=2
-numprocs=1
-numprocs_start=1
-
-[program:roadpin_backend_cron_taipei_city]
-command=/srv/roadpin/roadpin_backend/scripts/env_run.sh python -m app.cron_data.cron_taipei_city -i /etc/roadpin/production.ini
-process_name=roadpin_backend_cron_taipei_city
-user=roadpin
-directory=/srv/roadpin/roadpin_backend
-stdout_logfile=/var/log/roadpin/log.cron_taipei_city.out.txt
-stdout_logfile_maxbytes=200MB
-stdout_logfile_backups=2
-stderr_logfile=/var/log/roadpin/log.cron_taipei_city.err.txt
-stderr_logfile_maxbytes=200MB
-stderr_logfile_backups=2
-numprocs=1
-numprocs_start=1
-
-[program:roadpin_backend_cron_kaohsiung]
-command=/srv/roadpin/roadpin_backend/scripts/env_run.sh python -m app.cron_data.cron_kaohsiung -i /etc/roadpin/production.ini
-process_name=roadpin_backend_cron_kaohsiung
-user=roadpin
-directory=/srv/roadpin/roadpin_backend
-stdout_logfile=/var/log/roadpin/log.cron_kaohsiung.out.txt
-stdout_logfile_maxbytes=200MB
-stdout_logfile_backups=2
-stderr_logfile=/var/log/roadpin/log.cron_kaohsiung.err.txt
-stderr_logfile_maxbytes=200MB
-stderr_logfile_backups=2
-numprocs=1
-numprocs_start=1
-
-[program:roadpin_backend_cron_new_taipei_city]
-command=/srv/roadpin/roadpin_backend/scripts/env_run.sh python -m app.cron_data.cron_new_taipei_city -i /etc/roadpin/production.ini
-process_name=roadpin_backend_cron_new_taipei_city
-user=roadpin
-directory=/srv/roadpin/roadpin_backend
-stdout_logfile=/var/log/roadpin/log.cron_new_taipei_city.out.txt
-stdout_logfile_maxbytes=200MB
-stdout_logfile_backups=2
-stderr_logfile=/var/log/roadpin/log.cron_new_taipei_city.err.txt
-stderr_logfile_maxbytes=200MB
-stderr_logfile_backups=2
-numprocs=1
-numprocs_start=1
-
-[program:roadpin-frontend]
-command=/srv/roadpin/roadpin-frontend/scripts/server2.sh node /srv/roadpin/roadpin-frontend/node_modules/brunch/bin/brunch watch --server -P
-process_name=roadpin-frontend
-user=roadpin
-directory=/srv/roadpin/roadpin-frontend
-stdout_logfile=/var/log/roadpin/log.roadpin-frontend.out.txt
-stdout_logfile_maxbytes=200MB
-stdout_logfile_backups=2
-stderr_logfile=/var/log/roadpin/log.roadpin-frontend.err.txt
 stderr_logfile_maxbytes=200MB
 stderr_logfile_backups=2
 numprocs=1
