--- a/roadpin_backend/requirements.txt
+++ b/roadpin_backend/requirements.txt
@@ -1,17 +1,17 @@
 Beaker==1.6.4
 Cython==0.19.1
 Fabric==1.6.0
+MacFSEvents==0.3
 PyYAML==3.10
-SQLAlchemy==0.8.2
+SQLAlchemy==0.9.3
 Scrapy==0.18.0
 Twisted==13.1.0
 WebOb==1.2.3
 WebTest==1.4.3
-argparse==1.2.1
+app==0.0
 bottle==0.11.6
 colorama==0.2.5
 coverage==3.6
-distribute==0.6.35
 fluent-logger==0.3.3
 gdata==2.0.17
 gevent==1.0
@@ -23,6 +23,8 @@ mmh3==2.2
 mock==1.0.1
 msgpack-python==0.3.0
 nose==1.2.1
+numpy==1.8.0
+pandas==0.13.1
 paramiko==1.10.1
 protobuf==2.5.0
 protobuf-to-dict==0.0.5
@@ -30,17 +32,19 @@ psycopg2==2.5.1
 pyOpenSSL==0.13
 pycrypto==2.6
 pycurl==7.19.0
-pygeoip==0.2.6
+pygeoip==0.3.0
 pymongo==2.5.2
+python-dateutil==2.2
 python-termstyle==0.1.10
 pytz==2013b
 queuelib==1.0
-redis==2.7.2
+redis==2.9.1
 requests==1.2.0
+six==1.5.2
 sniffer==0.2.6
 ua-parser==0.3.2
 ujson==1.33
-virtualenv==1.9.1
+virtualenv==1.11.4
 w3lib==1.3
 wsgiref==0.1.2
 zope.deprecation==4.0.2
