--- a/production.ini
+++ b/production.ini
@@ -9,6 +9,8 @@ dologstdout = 0
 
 mongo_server_hostname = localhost
 mongo_server = road
+web_server = http://106.187.101.193:5346
+time_sleep = 30
 
 ###
 # logging configuration
