frontend package add karma plugins

--- a/roadpin-frontend/package.json
+++ b/roadpin-frontend/package.json
@@ -22,6 +22,9 @@
     "karma": ">=0.8.0",
     "karma-junit-reporter": ">=0.1.x",
     "karma-live-preprocessor": ">=0.1.x",
+    "karma-jasmine": ">=0.1.x",
+    "karma-chrome-launcher": ">=0.1.x",
+    "karma-html2js-preprocessor": ">=0.1.x",
     "LiveScript": ">=1.2.0",
     "prelude-ls": ">=1.0.x",
     "brunch": ">=1.5.x",
